--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,7 +11,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-ExtraLight.woff2');
     src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'),
-        url('Montserrat-ExtraLight.woff2') format('woff2');
+        url('../fonts/Montserrat-ExtraLight.woff2') format('woff2');
     font-weight: 200;
     font-style: normal;
 }
@@ -20,7 +20,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Regular.woff2');
     src: local('Montserrat Regular'), local('Montserrat-Regular'),
-        url('Montserrat-Regular.woff2') format('woff2');
+        url('../fonts/Montserrat-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -29,7 +29,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Bold.woff2');
     src: local('Montserrat Bold'), local('Montserrat-Bold'),
-        url('Montserrat-Bold.woff2') format('woff2');
+        url('../fonts/Montserrat-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
 }
@@ -56,7 +56,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Medium.woff2');
     src: local('Montserrat Medium'), local('Montserrat-Medium'),
-        url('Montserrat-Medium.woff2') format('woff2');
+        url('../fonts/Montserrat-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
 }
@@ -65,7 +65,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-ExtraBold.woff2');
     src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
-        url('Montserrat-ExtraBold.woff2') format('woff2');
+        url('../fonts/Montserrat-ExtraBold.woff2') format('woff2');
     font-weight: 800;
     font-style: normal;
 }
@@ -74,7 +74,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-SemiBold.woff2');
     src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
-        url('Montserrat-SemiBold.woff2') format('woff2');
+        url('../fonts/Montserrat-SemiBold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
 }
@@ -83,7 +83,7 @@
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Thin.woff2');
     src: local('Montserrat Thin'), local('Montserrat-Thin'),
-        url('Montserrat-Thin.woff2') format('woff2');
+        url('../fonts/Montserrat-Thin.woff2') format('woff2');
     font-weight: 100;
     font-style: normal;
 }
